<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coktail_cpy"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:paddingStart="@dimen/standard_padding"
        android:paddingEnd="@dimen/standard_padding"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standard_textsize"
            android:text="@string/welcome_title_text"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/standard_textsize"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            android:gravity="center_horizontal"
            android:text="@string/detail_text"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:textColor="@color/white"
            android:hint="@string/hint_cocktail_name"/>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/search_text"
            android:textColor="@color/white"
            android:background="@color/search_button_color_selector"/>

    </LinearLayout>

    <Button
        android:id="@+id/discoverButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:text="@string/discover_cocktail_textButton"
        android:textColor="@color/white"
        android:background="@color/discover_button_color_selector"/>

</RelativeLayout>

